# phabricator-rs

./: Cargo.toml
phabricator/: Cargo.toml
phabricator-api/: Cargo.toml
phabricator-api/examples/: phabapicli.rs
phabricator-api/src/: client.rs  lib.rs  types.rs  utils.rs
phabricator-api/src/edge/: search.rs
phabricator-api/src/maniphest/: info.rs  mod.rs  search.rs
phabricator-api/src/phid/: lookup.rs  mod.rs  query.rs
phabricator-api/src/project/: search.rs
phabricator-api/src/ser/: key.rs  mod.rs
phabricator-mock/: Cargo.toml
phabricator-mock/src/: column.rs  lib.rs  param.rs  phid.rs  policy.rs  priority.rs  project.rs  space.rs  status.rs  task.rs  user.rs
phabricator-mock/src/api/: edge.rs  maniphest.rs  mod.rs  phid.rs  project.rs
phabricator/src/: lib.rs  project.rs  projectsbuilder.rs  search.rs  task.rs  tasksbuilder.rs
