[package]
name = "phabricator-api"
version = "0.0.1"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sjoerdsimons/phabricator-rs"
repository = "https://github.com/sjoerdsimons/phabricator-rs"

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
erased-serde = "0.3.13"
serde_urlencoded = "0.7"
url = "2.2"
serde_json = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.10", features = [ "serde-str" ] }

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.8"
structopt = "0.3"
tokio = { version = "1.0", features = [ "full" ] }
phabricator-mock = { path = "../phabricator-mock" }
