[package]
name = "phabricator-mock"
version = "0.0.4"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
description = "Mock crate for the Phabricator web API"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sjoerdsimons/phabricator-rs"
repository = "https://github.com/sjoerdsimons/phabricator-rs"

[dependencies]
wiremock = "0.5.2"
url = "2.2.0"
serde_json = "1.0"
form_urlencoded = "1.0"
anyhow = "1.0.38"
serde = "1.0.123"
rand = "0.8.3"
derive_builder = "0.9.0"
rust_decimal = { version = "1.10", features = [ "serde-str" ] }

