[package]
name = "phabricator"
version = "0.0.1"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
phabricator-api = { path = "../phabricator-api" }
reqwest = { version = "0.11" }
url = "2.2"
futures = "0.3"
async-trait = "0.1.48"
rust_decimal = { version = "1.10", features = [ "serde-str" ] }

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.8"
tokio = { version = "1.0", features = [ "full" ] }
phabricator-mock = { path = "../phabricator-mock" }
