[package]
name = "phabricator"
version = "0.0.2"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
description = "Crate to work with Phabricator web APIs"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sjoerdsimons/phabricator-rs"
repository = "https://github.com/sjoerdsimons/phabricator-rs"

[dependencies]
thiserror = "1.0.24"
phabricator-api = { path = "../phabricator-api", version = "0.0.2" }
reqwest = { version = "0.11" }
url = "2.2"
futures = "0.3"
async-trait = "0.1.48"
rust_decimal = { version = "1.10", features = [ "serde-str" ] }

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.8"
tokio = { version = "1.0", features = [ "full" ] }
phabricator-mock = { path = "../phabricator-mock", version = "0.0.2" }
